--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@ His research interests include information retrieval and text mining.
   <tbody>
   <tr>
     <td><span class="title">The Hong Kong Polytechnic University </span> <br>
-	Bachelor in Computer Science and Technology &nbsp;&nbsp;&nbsp;&nbsp;  Sep 2015 - June 2019 <br>
-	Advisor: <a href="https://liqiangnie.github.io/" target="_blank">Prof. Liqiang Nie</a>
+	Bachelor in Computer Science &nbsp;&nbsp;&nbsp;&nbsp;  Jan 2020 - now <br>
+	Advisor: <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank">Prof. Wenjie Li</a>
      </td></tr></tbody></table>
 
 <table>
