--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ His research interests include information retrieval and text mining.
   <tbody>
   <tr>
     <td><span class="title">The Hong Kong Polytechnic University </span> <br>
-	Bachelor in Computer Science &nbsp;&nbsp;&nbsp;&nbsp;  Jan 2020 - now <br>
+	PHD in Computer Science &nbsp;&nbsp;&nbsp;&nbsp;  Jan 2020 - now <br>
 	Advisor: <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank">Prof. Wenjie Li</a>
      </td></tr></tbody></table>
 
