--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ His research interests include information retrieval and text mining.
 <!-- ============================Teaching Assistants===========================================!-->
 
 </br>		
-<p>Last update: Oct 8, 2019. Webpage template borrows from <a href="https://xiangwang1223.github.io/">Xiang Wang</a>.</p>
+<p>Webpage template borrows from <a href="https://xiangwang1223.github.io/">Xiang Wang</a>.</p>
 
 </div>
 </div>
