--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 <div id="news">
     <h2>News</h2><br>
     <font size="3px">
+    <b>29 Jan 2020</b><br>
+    <span class="easylink">
+    Our full paper "Large-Scale Question Tagging via Joint Question-Topic Embedding Learning" is accepted by TOIS. Congratulations to Professor <a href="https://liqiangnie.github.io/" target="_blank">Prof. Liqiang Nie</a>. 
+    </span><br><br>
+	    
 	    
     <b>22 Oct 2019</b><br>
     <span class="easylink">
