--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <font size="3px">
     <b>29 Jan 2020</b><br>
     <span class="easylink">
-    Our full paper "Large-Scale Question Tagging via Joint Question-Topic Embedding Learning" is accepted by TOIS. Congratulations to Professor <a href="https://liqiangnie.github.io/" target="_blank">Prof. Liqiang Nie</a>. 
+    Our full paper "Large-Scale Question Tagging via Joint Question-Topic Embedding Learning" is accepted by TOIS. Congratulations to Prof. <a href="https://liqiangnie.github.io/" target="_blank">Liqiang Nie</a>. 
     </span><br><br>
 	    
 	    
@@ -89,7 +89,7 @@ His research interests include information retrieval and text mining.
   <tr>
     <td><span class="title">The Hong Kong Polytechnic University </span> <br>
 	PHD in Computer Science &nbsp;&nbsp;&nbsp;&nbsp;  Jan 2020 - now <br>
-	Advisor: <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank">Prof. Wenjie Li</a>
+	Advisor: Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank"> Wenjie Li</a>
      </td></tr></tbody></table>
 
 <table>
@@ -97,7 +97,7 @@ His research interests include information retrieval and text mining.
   <tr>
     <td><span class="title">Shandong University </span> <br>
 	Bachelor in Computer Science and Technology &nbsp;&nbsp;&nbsp;&nbsp;  Sep 2015 - June 2019 <br>
-	Advisor: <a href="https://liqiangnie.github.io/" target="_blank">Prof. Liqiang Nie</a>
+	Advisor: Prof. <a href="https://liqiangnie.github.io/" target="_blank"> Liqiang Nie</a>
      </td></tr></tbody></table>
 <!-- ============================Education===========================================!-->
 
