--- a/index.html
+++ b/index.html
@@ -116,6 +116,22 @@ His research interests include information retrieval and text mining.
 <div id="papers">
 <h2 style="CLEAR: both">Publications <a href="" target="_blank"></a></h2> 
 </br>
+<b> In the Year of 020: </b> </br></br>
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href=".pdf" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Large-Scale Question Tagging via Joint Question-Topic Embedding Learning</span> 
+      <br>Liqiang Nie, <b>Yongqi Li</b>, Fuli Feng, Xuemeng Song, Meng Wang & Yinglong Wang
+    <br>ACM TOIS (Full)
+   <br>&nbsp;&nbsp;&bull; <a href="" target="_blank">Codes&Data Coming soon</a> &nbsp;&nbsp;
+
+  </td>
+  </tr>
+ </tbody>
+</table>
 
 <b> In the Year of 2019: </b> </br></br>
 
