--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@ His research interests include information retrieval and text mining.
 <table>
   <tbody>
   <tr>
-    <td class="left"><a href=".pdf" 
+    <td class="left"><a href="papers/>Large-Scale Question Tagging via Joint Question-Topic Embedding Learning.pdf.pdf" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Large-Scale Question Tagging via Joint Question-Topic Embedding Learning</span> 
       <br>Liqiang Nie, <b>Yongqi Li</b>, Fuli Feng, Xuemeng Song, Meng Wang & Yinglong Wang
     <br>ACM TOIS (Full)
-   <br>&nbsp;&nbsp;&bull; <a href="" target="_blank">Codes&Data Coming soon</a> &nbsp;&nbsp;
+   <br>&nbsp;&nbsp;&bull; <a href="https://github.com/liyongqi67/PROFIT" target="_blank">Codes&Data</a> &nbsp;&nbsp;
 
   </td>
   </tr>
