--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ His research interests include information retrieval and text mining.
 <table>
   <tbody>
   <tr>
-    <td class="left"><a href="papers/Large-Scale Question Tagging via Joint Question-Topic Embedding Learning.pdf" 
+    <td class="left"><a href="papers/Large-Scale_Question_Tagging_via_Joint_Question-Topic_Embedding_Learning.pdf" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Large-Scale Question Tagging via Joint Question-Topic Embedding Learning</span> 
       <br>Liqiang Nie, <b>Yongqi Li</b>, Fuli Feng, Xuemeng Song, Meng Wang & Yinglong Wang
