--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ His research interests include information retrieval and text mining.
 <h2 style="CLEAR: both">Experiences</h2>
 <table>
   <tbody><tr>
-    <td> <span class="title">Research Assistant</span>, Shandong University, October 2017 - Present   <br>
+    <td> <span class="title">Research Assistant</span>, Shandong University, October 2017 - December 2019 <br>
 			Advisior: <a href="https://liqiangnie.github.io/" target="_blank">Prof. Liqiang Nie</a>
 		</td></tr></tbody>
 </table>
