--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ His research interests include information retrieval and text mining.
   <tbody>
   <tr>
     <td><span class="title">The Hong Kong Polytechnic University </span> <br>
-	PHD in Computer Science &nbsp;&nbsp;&nbsp;&nbsp;  Jan 2020 - now <br>
+	PHD in Computer Science, Jan 2020 - now <br>
 	Advisor: <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank">Prof. Wenjie Li</a>
      </td></tr></tbody></table>
 
@@ -98,7 +98,7 @@ His research interests include information retrieval and text mining.
   <tbody>
   <tr>
     <td><span class="title">Shandong University </span> <br>
-	Bachelor in Computer Science and Technology &nbsp;&nbsp;&nbsp;&nbsp;  Sep 2015 - June 2019 <br>
+	Bachelor in Computer Science and Technology, Sep 2015 - June 2019 <br>
 	Advisor:  <a href="https://liqiangnie.github.io/" target="_blank">Prof. Liqiang Nie</a>
      </td></tr></tbody></table>
 <!-- ============================Education===========================================!-->
@@ -107,7 +107,7 @@ His research interests include information retrieval and text mining.
 <h2 style="CLEAR: both">Experiences</h2>
 <table>
   <tbody><tr>
-    <td> <span class="title">Research Assistant</span>, Shandong University, October 2017 - December 2019 <br>
+    <td> <span class="title">Research Assistant</span>, Shandong University, Oct 2017 - Dec 2019 <br>
 			Advisior: <a href="https://liqiangnie.github.io/" target="_blank">Prof. Liqiang Nie</a>
 		</td></tr></tbody>
 </table>
