--- a/index.html
+++ b/index.html
@@ -187,18 +187,33 @@ His research interests include information retrieval and text mining.
   <span class="title">Routing Micro-videos via A Temporal Graph-guided Recommendation System (applying)</span> &nbsp;&nbsp;
   <br> - Meng Liu, Liqiang Nie, Yongqi Li, Jianhua Yin, Tian Gan and Xuemeng Song
 </td></tr></tbody></table>
-
+<!--
 <table><tbody><tr><td>
   <span class="title">Explicit Interaction Model towards Text Classification (applying)</span> &nbsp;&nbsp;
   <br> - Cunxiao Du, Fuli Feng, Zhaozheng Chen, Yongqi Li, Xuemeng Song and Liqiang Nie
 </td></tr></tbody></table>
-
+!-->
 <table><tbody><tr><td>
   <span class="title">Learning to Score Diving Sports</span> (ZL 2018 1 1030493.8) &nbsp;&nbsp; 
   <br> - Yongqi Li, Cunxiao Du, Junyu Lin, Tian Gan, Xuemeng Song and Liqiang Nie
 </td></tr></tbody></table>
 
 <!-- ============================Patent===========================================!-->
+
+<!-- ============================Teaching Assistant===========================================!-->
+<h2 style="CLEAR: both;">Teaching Assistant</h2>
+<table><tbody><tr><td>
+<span class="title">2020 Spring, COMP1433 Introduction to Data Analytics </span><br><br>
+</td></tr></tbody></table>
+<!-- ============================Teaching Assistant===========================================!-->
+
+<!-- ============================Professional Services===========================================!-->
+<h2 style="CLEAR: both;">Professional Services</h2>
+<table><tbody><tr><td>
+<span class="title">Invited Reviewer for ChinaMM(2020) </span><br><br>
+</td></tr></tbody></table>
+
+<!-- ============================Professional Services===========================================!-->
 
 
 <!-- ============================Honors===========================================!-->
