--- a/index.html
+++ b/index.html
@@ -203,14 +203,16 @@ His research interests include information retrieval and text mining.
 <!-- ============================Teaching Assistant===========================================!-->
 <h2 style="CLEAR: both;">Teaching Assistant</h2>
 <table><tbody><tr><td>
-<span class="title">2020 Spring, COMP1433 Introduction to Data Analytics </span><br><br>
+<span class="title">2020 Spring, COMP1433 Introduction to Data Analytics </span>
+	
 </td></tr></tbody></table>
 <!-- ============================Teaching Assistant===========================================!-->
 
 <!-- ============================Professional Services===========================================!-->
 <h2 style="CLEAR: both;">Professional Services</h2>
 <table><tbody><tr><td>
-<span class="title">Invited Reviewer for ChinaMM(2020) </span><br><br>
+  Invited Reviewer for <span class="title">ChinaMM (2020) </span>
+	
 </td></tr></tbody></table>
 
 <!-- ============================Professional Services===========================================!-->
