--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ His research interests include information retrieval and text mining.
 <!-- ============================Teaching Assistant===========================================!-->
 <h2 style="CLEAR: both;">Teaching Assistant</h2>
 <table><tbody><tr><td>
-<span class="title">2020 Spring, COMP1433 Introduction to Data Analytics </span>
+2020 Spring, COMP1433 <span class="title">Introduction to Data Analytics </span>
 	
 </td></tr></tbody></table>
 <!-- ============================Teaching Assistant===========================================!-->
