--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
 <div id="news">
     <h2>News</h2><br>
     <font size="3px">
+	    
+    <b>26 Nov 2020</b><br>
+    <span class="easylink">
+    Our patent <b>"Explicit Interaction Model towards Text Classification"</b> is granted, and the Patent Number is "ZL 2018 1 1296063.0". Congratulations to <a href="https://nonvolatilememory.github.io/" target="_blank">Cunxiao Du</a>.
+    </span><br><br>	    
+
+	    
     <b>29 Jan 2020</b><br>
     <span class="easylink">
     Our full paper "Large-Scale Question Tagging via Joint Question-Topic Embedding Learning" is accepted by TOIS. Congratulations to <a href="https://liqiangnie.github.io/" target="_blank">Prof. Liqiang Nie</a>. 
@@ -187,12 +194,12 @@ His research interests include information retrieval and text mining.
   <span class="title">Routing Micro-videos via A Temporal Graph-guided Recommendation System (applying)</span> &nbsp;&nbsp;
   <br> - Meng Liu, Liqiang Nie, Yongqi Li, Jianhua Yin, Tian Gan and Xuemeng Song
 </td></tr></tbody></table>
-<!--
+
 <table><tbody><tr><td>
-  <span class="title">Explicit Interaction Model towards Text Classification (applying)</span> &nbsp;&nbsp;
+  <span class="title">Explicit Interaction Model towards Text Classification </span> (ZL 2018 1 1296063.0) &nbsp;&nbsp;
   <br> - Cunxiao Du, Fuli Feng, Zhaozheng Chen, Yongqi Li, Xuemeng Song and Liqiang Nie
 </td></tr></tbody></table>
-!-->
+
 <table><tbody><tr><td>
   <span class="title">Learning to Score Diving Sports</span> (ZL 2018 1 1030493.8) &nbsp;&nbsp; 
   <br> - Yongqi Li, Cunxiao Du, Junyu Lin, Tian Gan, Xuemeng Song and Liqiang Nie
