--- a/index.html
+++ b/index.html
@@ -211,7 +211,8 @@ His research interests include information retrieval and text mining.
 <h2 style="CLEAR: both;">Teaching Assistant</h2>
 <table><tbody><tr><td>
 2020 Spring, COMP1433 <span class="title">Introduction to Data Analytics </span>
-	
+2020 Fall, COMP5541 <span class="title">Machine Learning and Data Analytics </span>
+
 </td></tr></tbody></table>
 <!-- ============================Teaching Assistant===========================================!-->
 
