--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@ His research interests include information retrieval and text mining.
 <h2 style="CLEAR: both;">Projects</h2>
 <table><tbody><tr><td>
   <span class="title">The TREC Conversational Assistance Track(2020)</span> &nbsp;&nbsp; 
-  <br> &nbsp;&nbsp;&bull; <a href="https://github.com/liyongqi67/PROFIT" target="_blank">pdf</a> &nbsp;&nbsp;
+  <br> - <a href="papers/polyu_report_cast_2020.pdf" target="_blank">Report</a> &nbsp;&nbsp;
+
 </td></tr></tbody></table>
 
 
