--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta content="IE=7.0000" http-equiv="X-UA-Compatible">
 <title>Yongqi Li's Homepage</title>
 <meta name="description" content="Yongqi Li.">
-<meta name="keywords" content="Yongqi Li &#128513, Polyu, homepage, PHD">
+<meta name="keywords" content="Yongqi Li, Polyu, homepage, PHD">
 
 <style>@-moz-keyframes nodeInserted{from{opacity:0.99;}to{opacity:1;}}@-webkit-keyframes nodeInserted{from{opacity:0.99;}to{opacity:1;}}@-o-keyframes nodeInserted{from{opacity:0.99;}to{opacity:1;}}@keyframes nodeInserted{from{opacity:0.99;}to{opacity:1;}}embed,object{animation-duration:.001s;-ms-animation-duration:.001s;-moz-animation-duration:.001s;-webkit-animation-duration:.001s;-o-animation-duration:.001s;animation-name:nodeInserted;-ms-animation-name:nodeInserted;-moz-animation-name:nodeInserted;-webkit-animation-name:nodeInserted;-o-animation-name:nodeInserted;}</style>	
 	
@@ -82,7 +82,7 @@ liyongqi0@gmail.com</a><br>
 </tbody></table>
 
 <div style="margin-top:20px;">
-Yongqi Li is now a PHD student at Computing Department of The Hong Kong Polytechnic University. 
+Yongqi Li &#128513 is now a PHD student at Computing Department of The Hong Kong Polytechnic University. 
 He received the B.E. degree in School of Computer Science and Technology from Shandong University, in 2019. 
 His research interests include information retrieval and text mining.    
 </div>
