--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@ His research interests include information retrieval and text mining.
 <table><tbody><tr><td>
 2020 Spring, COMP1433 <span class="title">Introduction to Data Analytics </span> <br><br>
 2020 Fall, COMP5541 <span class="title">Machine Learning and Data Analytics </span>
+2021 Spring, COMP5423 <span class="title">Natural Language Processing </span>
 
 </td></tr></tbody></table>
 <!-- ============================Teaching Assistant===========================================!-->
@@ -228,6 +229,7 @@ His research interests include information retrieval and text mining.
 <h2 style="CLEAR: both;">Professional Services</h2>
 <table><tbody><tr><td>
   Invited Reviewer for <span class="title">ChinaMM (2020) </span>
+  Invited Reviewer for <span class="title">IEEE Transactions on Knowledge and Data Engineering (TKDE)</span>
 	
 </td></tr></tbody></table>
 
