--- a/index.html
+++ b/index.html
@@ -312,6 +312,9 @@ His research interests include information retrieval and text mining.
 
 </div>
 </div>
-
+<video width="320" height="240" controls>
+  <source src="movie.mp4" type="video/mp4">
+  </object> 
+</video>
 
 </body></html>
