--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ His research interests include information retrieval and text mining.
 </div>
 </div>
 <video width="320" height="240" controls>
-  <source src="movie.mp4" type="video/mp4">
+  <source src="https://github.com/liyongqi67/SmartMedicalKit/tree/master/Demo%20Videos/SmartMedicineKit.mp4" type="video/mp4">
   </object> 
 </video>
 
