--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ His research interests include information retrieval and text mining.
   <tr>
     <td><span class="title">The Hong Kong Polytechnic University </span> <br>
 	PHD in Computer Science, Jan 2020 - now <br>
-	Advisor: <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank">Prof. Wenjie Li</a>
+	Advisor: <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank">Prof. Wenjie Li</a> Mentor:  <a href="https://liqiangnie.github.io/" target="_blank">Prof. Liqiang Nie</a>
      </td></tr></tbody></table>
 
 <table>
