--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@ His research interests include information retrieval and text mining.
   <tr>
     <td><span class="title">The Hong Kong Polytechnic University </span> <br>
 	PHD in Computer Science, Jan 2020 - now <br>
-	Advisor: <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank">Prof. Wenjie Li</a> Mentor:  <a href="https://liqiangnie.github.io/" target="_blank">Prof. Liqiang Nie</a>
+	Advisor: <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank">Prof. Wenjie Li</a> <br>
+	Mentor:  <a href="https://liqiangnie.github.io/" target="_blank">Prof. Liqiang Nie</a>
+	    
      </td></tr></tbody></table>
 
 <table>
@@ -110,7 +112,9 @@ His research interests include information retrieval and text mining.
      </td></tr></tbody></table>
 <!-- ============================Education===========================================!-->
 
+
 <!-- ============================Experiences===========================================!-->
+<!--
 <h2 style="CLEAR: both">Experiences</h2>
 <table>
   <tbody><tr>
@@ -118,6 +122,7 @@ His research interests include information retrieval and text mining.
 			Advisior: <a href="https://liqiangnie.github.io/" target="_blank">Prof. Liqiang Nie</a>
 		</td></tr></tbody>
 </table>
+!-->
 <!-- ============================Experiences===========================================!-->
 
 
