--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <table style="background-color:white;">
 <tbody><tr nosave="">
 <td valign="CENTER">
-<img src="./images/profile.png" height="220" align="left">
+<img src="./images/liyongqi.png" height="220" align="left">
 </td>
 
 <td valign="CENTER" align="left">
