--- a/index.html
+++ b/index.html
@@ -130,6 +130,22 @@ His research interests include information retrieval and text mining.
 <div id="papers">
 <h2 style="CLEAR: both">Publications <a href="" target="_blank"></a></h2> 
 </br>
+<b> pre-print: </b> </br></br>
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="papers/Large-Scale_Question_Tagging_via_Joint_Question-Topic_Embedding_Learning.pdf" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Large-Scale Question Tagging via Joint Question-Topic Embedding Learning</span> 
+      <br>Liqiang Nie, <b>Yongqi Li</b>, Fuli Feng, Xuemeng Song, Meng Wang & Yinglong Wang
+    <br>ACM TOIS (Full)
+   <br>&nbsp;&nbsp;&bull; <a href="https://github.com/liyongqi67/PROFIT" target="_blank">Codes&Data</a> &nbsp;&nbsp;
+
+  </td>
+  </tr>
+ </tbody>
+</table>
+
 <b> In the Year of 2020: </b> </br></br>
 
 <table>
