--- a/index.html
+++ b/index.html
@@ -131,15 +131,47 @@ His research interests include information retrieval and text mining.
 <h2 style="CLEAR: both">Publications <a href="" target="_blank"></a></h2> 
 </br>
 <b> pre-print: </b> </br></br>
+
+
 <table>
   <tbody>
   <tr>
-    <td class="left"><a href="papers/Large-Scale_Question_Tagging_via_Joint_Question-Topic_Embedding_Learning.pdf" 
+    <td class="left"><a href="papers/" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">Large-Scale Question Tagging via Joint Question-Topic Embedding Learning</span> 
-      <br>Liqiang Nie, <b>Yongqi Li</b>, Fuli Feng, Xuemeng Song, Meng Wang & Yinglong Wang
-    <br>ACM TOIS (Full)
-   <br>&nbsp;&nbsp;&bull; <a href="https://github.com/liyongqi67/PROFIT" target="_blank">Codes&Data</a> &nbsp;&nbsp;
+    <td><span class="title">Data Distillation for Text Classification</span> 
+      <br><b>Yongqi Li</b> & Wenjie Li
+   <br>&nbsp;&nbsp;&bull; <a href="https://arxiv.org/abs/2104.08448" target="_blank">Arxiv</a> &nbsp;&nbsp;
+
+  </td>
+  </tr>
+ </tbody>
+</table>
+
+
+
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="papers/" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">A Graph-guided Multi-round Retrieval Method for Conversational Open-domain Question Answering</span> 
+      <br><b>Yongqi Li</b>, Wenjie Li & Liqiang Nie
+   <br>&nbsp;&nbsp;&bull; <a href="https://arxiv.org/abs/2104.08443" target="_blank">Arxiv</a> &nbsp;&nbsp;
+
+  </td>
+  </tr>
+ </tbody>
+</table>
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="papers/" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Incremental Knowledge Based Question Answering</span> 
+      <br><b>Yongqi Li</b>, Wenjie Li & Liqiang Nie
+   <br>&nbsp;&nbsp;&bull; <a href="https://arxiv.org/abs/2101.06938" target="_blank">Arxiv</a> &nbsp;&nbsp;
 
   </td>
   </tr>
