--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ His research interests include information retrieval and text mining.
 <div id="papers">
 <h2 style="CLEAR: both">Publications <a href="" target="_blank"></a></h2> 
 </br>
-<b> pre-print: </b> </br></br>
+<b> Pre-print: </b> </br></br>
 
 
 <table>
