--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@ His research interests include information retrieval and text mining.
 <!-- ============================Professional Services===========================================!-->
 <h2 style="CLEAR: both;">Professional Services</h2>
 <table><tbody><tr><td>
-  Invited Reviewer for <span class="title">IEEE Transactions on Knowledge and Data Engineering (TKDE)</span>
-  Invited Reviewer for <span class="title">ChinaMM (2020) </span><br><br>
+  Invited Reviewer for <span class="title">IEEE Transactions on Knowledge and Data Engineering (TKDE)</span><br><br>
+  Invited Reviewer for <span class="title">ChinaMM (2020) </span>
 	
 </td></tr></tbody></table>
 
