--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ liyongqi0@gmail.com</a><br>
 </tbody></table>
 
 <div style="margin-top:20px;">
-Yongqi Li is now a PHD student at Computing Department of The Hong Kong Polytechnic University. 
+Yongqi Li is now a PHD student in Department of Computing at The Hong Kong Polytechnic University. 
 He received the B.E. degree in School of Computer Science and Technology from Shandong University, in 2019. 
 His research interests include information retrieval and text mining.    
 </div>
