--- a/index.html
+++ b/index.html
@@ -21,10 +21,6 @@
     <h2>News</h2><br>
     <font size="3px">
 
-    <b>20 Nov 2021</b><br>
-    <span class="easylink">
-    Our full paper about conversational QA is accepted by TOIS.
-    </span><br><br>	
 	    
     <b>26 Nov 2020</b><br>
     <span class="easylink">
@@ -279,7 +275,7 @@ His research interests include information retrieval and text mining.
 2020 Spring, COMP1433 <span class="title">Introduction to Data Analytics </span> <br><br>
 2020 Fall, COMP5541 <span class="title">Machine Learning and Data Analytics </span><br><br>
 2021 Spring, COMP5423 <span class="title">Natural Language Processing </span>
-
+2021 Fall, COMP6703 <span class="title">Advanced Topics in Data Analytics</span>
 </td></tr></tbody></table>
 <!-- ============================Teaching Assistant===========================================!-->
 
