--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     <h2>News</h2><br>
     <font size="3px">
 
+    <b>20 Nov 2021</b><br>
+    <span class="easylink">
+    Our full paper about conversational QA is accepted by TOIS.
+    </span><br><br>	
 	    
     <b>26 Nov 2020</b><br>
     <span class="easylink">
