--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <b>20 Nov 2021</b><br>
     <span class="easylink">
-    Our full paper about conversational QA is accepted by TOIS.
+    Our full paper is accepted by TOIS.
     </span><br><br>	
 	    
     <b>26 Nov 2020</b><br>
