--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ His research interests include information retrieval and text mining.
 <table><tbody><tr><td>
 2020 Spring, COMP1433 <span class="title">Introduction to Data Analytics </span> <br><br>
 2020 Fall, COMP5541 <span class="title">Machine Learning and Data Analytics </span><br><br>
-2021 Spring, COMP5423 <span class="title">Natural Language Processing </span>
+2021 Spring, COMP5423 <span class="title">Natural Language Processing </span><br><br
 2021 Fall, COMP6703 <span class="title">Advanced Topics in Data Analytics</span>
 </td></tr></tbody></table>
 <!-- ============================Teaching Assistant===========================================!-->
