--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
     <h2>News</h2><br>
     <font size="3px">
 
+    <b>26 Feb 2022</b><br>
+    <span class="easylink">
+    Our full paper about CoQA is accepted by ACL2022 main .
+    </span><br><br>		    
+	    
+	    
     <b>20 Nov 2021</b><br>
     <span class="easylink">
     Our full paper about CoQA is accepted by TOIS.
