--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <b>26 Feb 2022</b><br>
     <span class="easylink">
-    Our full paper about CoQA is accepted by ACL2022 main .
+    Our full paper about MMCoQA is accepted by ACL2022 Main conference.
     </span><br><br>		    
 	    
 	    
