--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@ His research interests include information retrieval and text mining.
 2020 Fall, COMP5541 <span class="title">Machine Learning and Data Analytics </span><br><br>
 2021 Spring, COMP5423 <span class="title">Natural Language Processing </span><br><br>
 2021 Fall, COMP6703 <span class="title">Advanced Topics in Data Analytics</span>
+2022 Spring, COMP5423 <span class="title">Natural Language Processing </span><br><br>	
 </td></tr></tbody></table>
 <!-- ============================Teaching Assistant===========================================!-->
 
