--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@ His research interests include information retrieval and text mining.
 2020 Spring, COMP1433 <span class="title">Introduction to Data Analytics </span> <br><br>
 2020 Fall, COMP5541 <span class="title">Machine Learning and Data Analytics </span><br><br>
 2021 Spring, COMP5423 <span class="title">Natural Language Processing </span><br><br>
-2021 Fall, COMP6703 <span class="title">Advanced Topics in Data Analytics</span>
-2022 Spring, COMP5423 <span class="title">Natural Language Processing </span><br><br>	
+2021 Fall, COMP6703 <span class="title">Advanced Topics in Data Analytics</span> <br><br>
+2022 Spring, COMP5423 <span class="title">Natural Language Processing </span>	
 </td></tr></tbody></table>
 <!-- ============================Teaching Assistant===========================================!-->
 
