--- a/index.html
+++ b/index.html
@@ -150,6 +150,20 @@ His research interests include information retrieval and text mining.
   <tr>
     <td class="left"><a href="papers/xxx" 
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">MMCoQA: Conversational Question Answering over Text, Tables, and Images</span> 
+      <br><b>Yongqi Li</b>, Wenjie Li & Liqiang Nie
+    <br>ACL2022 (Full)
+   <br>&nbsp;&nbsp;&bull; <a href="xxx" target="_blank">Codes&Data</a> &nbsp;&nbsp;
+  </td>
+  </tr>
+ </tbody>
+</table>
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="papers/xxx" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Dynamic Graph Reasoning for Conversational Open-Domain Question Answering</span> 
       <br><b>Yongqi Li</b>, Wenjie Li & Liqiang Nie
     <br>ACM TOIS (Full)
