--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@ liyongqi0@gmail.com</a><br>
 </tbody></table>
 
 <div style="margin-top:20px;">
-Yongqi Li is a PHD student in Department of Computing at The Hong Kong Polytechnic University. 
+Yongqi Li is a PHD student in the Department of Computing at The Hong Kong Polytechnic University. 
 He received the B.E. degree in School of Computer Science and Technology from Shandong University, in 2019. 
-His research interests include information retrieval and text mining.    
+His research interests include information retrieval and multimedia computing. Now he mainly focuses on conversational 
+information seeking, such as conversational QA, multimodal conversational QA, and conversational search.
 </div>
 <!-- ============================Profiles===========================================!-->
 
