--- a/index.html
+++ b/index.html
@@ -145,7 +145,6 @@ information seeking, such as conversational QA, multimodal conversational QA, an
 
 
 
-<b> In the Year of 2022: </b> </br></br>
 <table>
   <tbody>
   <tr>
@@ -175,6 +174,63 @@ information seeking, such as conversational QA, multimodal conversational QA, an
 </table>
 
 
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="papers/MM2019_Routing_Micro_videos_via_A_Temporal_Graph_guided_Recommendation_System.pdf" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Routing Micro-videos via A Temporal Graph-guided Recommendation System</span> 
+      <br><b>Yongqi Li</b>, Meng Liu, Jianhua Yin, Chaoran Cui, Xinshun-Xu & Liqiang Nie
+    <br>ACM MM 2019 (Full)
+   <br>&nbsp;&nbsp;&bull; <a href="https://github.com/liyongqi67/ALPINE" target="_blank">Codes&Data</a> &nbsp;&nbsp;
+  </td>
+  </tr>
+ </tbody>
+</table>
+
+<!--
+<b> In the Year of 2022: </b> </br></br>
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="papers/xxx" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">MMCoQA: Conversational Question Answering over Text, Tables, and Images</span> 
+      <br><b>Yongqi Li</b>, Wenjie Li & Liqiang Nie
+    <br>ACL 2022 (Full)
+   <br>&nbsp;&nbsp;&bull; <a href="xxx" target="_blank">Codes&Data</a> &nbsp;&nbsp;
+  </td>
+  </tr>
+ </tbody>
+</table>
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="papers/xxx" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Dynamic Graph Reasoning for Conversational Open-Domain Question Answering</span> 
+      <br><b>Yongqi Li</b>, Wenjie Li & Liqiang Nie
+    <br>ACM TOIS (Full)
+   <br>&nbsp;&nbsp;&bull; <a href="xxx" target="_blank">Codes&Data</a> &nbsp;&nbsp;
+  </td>
+  </tr>
+ </tbody>
+</table>
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="papers/Large-Scale_Question_Tagging_via_Joint_Question-Topic_Embedding_Learning.pdf" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Large-Scale Question Tagging via Joint Question-Topic Embedding Learning</span> 
+      <br>Liqiang Nie, <b>Yongqi Li</b>, Fuli Feng, Xuemeng Song, Meng Wang & Yinglong Wang
+    <br>ACM TOIS (Full)
+   <br>&nbsp;&nbsp;&bull; <a href="https://github.com/liyongqi67/PROFIT" target="_blank">Codes&Data</a> &nbsp;&nbsp;
+  </td>
+  </tr>
+ </tbody>
+</table>
 
 
 <b> Pre-print: </b> </br></br>
@@ -237,6 +293,10 @@ information seeking, such as conversational QA, multimodal conversational QA, an
   </tr>
  </tbody>
 </table>
+
+
+
+-->
 <!--
 <b> Look for the full publication list? Please see <a href="files/xiangwang_cv.pdf" target="_blank">my CV</a> or visit <a href="https://scholar.google.com.sg/citations?user=HdhaQB0AAAAJ&hl=en" target="_blank">Google Scholar</a>.</b></br></br>
 -->
