--- a/index.html
+++ b/index.html
@@ -173,6 +173,48 @@ information seeking, such as conversational QA, multimodal conversational QA, an
  </tbody>
 </table>
 
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="papers/Large-Scale_Question_Tagging_via_Joint_Question-Topic_Embedding_Learning.pdf" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Large-Scale Question Tagging via Joint Question-Topic Embedding Learning</span> 
+      <br>Liqiang Nie, <b>Yongqi Li</b>, Fuli Feng, Xuemeng Song, Meng Wang & Yinglong Wang
+    <br>ACM TOIS (Full)
+   <br>&nbsp;&nbsp;&bull; <a href="https://github.com/liyongqi67/PROFIT" target="_blank">Codes&Data</a> &nbsp;&nbsp;
+  </td>
+  </tr>
+ </tbody>
+</table>
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="papers/" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Data Distillation for Text Classification</span> 
+      <br><b>Yongqi Li</b> & Wenjie Li
+   <br>&nbsp;&nbsp;&bull; <a href="https://arxiv.org/abs/2104.08448" target="_blank">Arxiv</a> &nbsp;&nbsp;
+
+  </td>
+  </tr>
+ </tbody>
+</table>
+
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="papers/" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Incremental Knowledge Based Question Answering</span> 
+      <br><b>Yongqi Li</b>, Wenjie Li & Liqiang Nie
+   <br>&nbsp;&nbsp;&bull; <a href="https://arxiv.org/abs/2101.06938" target="_blank">Arxiv</a> &nbsp;&nbsp;
+  </td>
+  </tr>
+ </tbody>
+</table>
+
 
 <table>
   <tbody>
