--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <a href="https://www.comp.polyu.edu.hk/en-us/", target="_blank">Computing Department</a><br/>
 <a href="https://www.polyu.edu.hk/web/en/home/index.html", target="_blank">The Hong Kong Polytechnic University</a><br/>
 </p><p style="margin-left:0px;">
-The Hong Kong Polytechnic University, Hong Kong<br>
+11 Yuk Choi Road, Hung Hom, Kowloon, Hong Kong<br>
 </p><p style="margin-left:0px;">
 liyongqi0@gmail.com</a><br>
 <!--&bull; <a href="files/CV_liyongqi0.pdf">CV</a>!--> &bull; <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=JHpVycsAAAAJ">Google Scholar</a> &bull; <a href="https://github.com/liyongqi67">GitHub</a> <br>
