--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@ information seeking, such as conversational QA, multimodal conversational QA, an
 <!-- ============================Professional Services===========================================!-->
 <h2 style="CLEAR: both;">Professional Services</h2>
 <table><tbody><tr><td>
-  Invited Reviewer for <span class="title"ACM Transactions on Information Systems (TOIS)</span><br><br>
+  Invited Reviewer for <span class="title"> ACM Transactions on Information Systems (TOIS)</span><br><br>
   Invited Reviewer for <span class="title">IEEE Transactions on Knowledge and Data Engineering (TKDE)</span><br><br>
   Invited Reviewer for <span class="title">ChinaMM (2020) </span>
 	
