--- a/index.html
+++ b/index.html
@@ -126,15 +126,13 @@ information seeking, such as conversational QA, multimodal conversational QA, an
 
 
 <!-- ============================Experiences===========================================!-->
-<!--
 <h2 style="CLEAR: both">Experiences</h2>
 <table>
   <tbody><tr>
-    <td> <span class="title">Research Assistant</span>, Shandong University, Oct 2017 - Dec 2019 <br>
-			Advisior: <a href="https://liqiangnie.github.io/" target="_blank">Prof. Liqiang Nie</a>
+    <td> <span class="title">Research Intern</span>, Microsoft Asia, Apr 222 - Now <br>
+			Working with <a href="https://scholar.google.com.hk/citations?user=InAQ3o0AAAAJ&hl=zh-CN&oi=ao" target="_blank">Nan Yang</a>, <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=NfJbKJ4AAAAJ" target="_blank">Liang Wang</a>, <a href="http://gitnlp.org/" target="_blank">Furu Wei</a>
 		</td></tr></tbody>
 </table>
-!-->
 <!-- ============================Experiences===========================================!-->
 
 
