--- a/index.html
+++ b/index.html
@@ -409,8 +409,10 @@ information seeking, such as conversational QA, multimodal conversational QA, an
 <!-- ============================Professional Services===========================================!-->
 <h2 style="CLEAR: both;">Professional Services</h2>
 <table><tbody><tr><td>
+  Program Committee Member and Reviewer for <span class="title">ACM WSDM 2023</span><br><br>
   Invited Reviewer for <span class="title">ACM Transactions on Information Systems (TOIS)</span><br><br>
   Invited Reviewer for <span class="title">IEEE Transactions on Knowledge and Data Engineering (TKDE)</span><br><br>
+  Invited Reviewer for <span class="title">Information Sciences</span><br><br>
   Invited Reviewer for <span class="title">ChinaMM (2020) </span>
 	
 </td></tr></tbody></table>
