--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <table style="background-color:white;">
 <tbody><tr nosave="">
 <td valign="CENTER">
-<img src="./images/profile2.jgp" height="220" align="left">
+<img src="./images/profile2.jpg" height="220" align="left">
 </td>
 
 <td valign="CENTER" align="left">
