--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@ information seeking, such as conversational QA, multimodal conversational QA, an
 <!-- ============================Teaching Assistants===========================================!-->
 
 </br>		
-<p>Webpage template borrows from <a href="https://xiangwang1223.github.io/">Xiang Wang</a>.</p>
+<!-- <p>Webpage template borrows from <a href="https://xiangwang1223.github.io/">Xiang Wang</a>.</p> !-->
 
 </div>
 </div>
