--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ information seeking, such as conversational QA, multimodal conversational QA, an
 <!-- ============================Patent===========================================!-->
 <h2 style="CLEAR: both;">Patent</h2>
 <table><tbody><tr><td>
-  <span class="title">Routing Micro-videos via A Temporal Graph-guided Recommendation System (applying)</span> &nbsp;&nbsp;
+  <span class="title">Routing Micro-videos via A Temporal Graph-guided Recommendation System</span>(ZL 2019 1 0599470.7) &nbsp;&nbsp;
   <br> - Meng Liu, Liqiang Nie, Yongqi Li, Jianhua Yin, Tian Gan and Xuemeng Song
 </td></tr></tbody></table>
 
