--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
 <div id="news">
     <h2>News</h2><br>
     <font size="3px">
-
+	    
+    <b>2 May 2023</b><br>
+    <span class="easylink">
+    Our full paper about Generative Retrieval is accepted by ACL 2023 Main Conference.
+    </span><br><br>	
+	    
     <b>26 Feb 2022</b><br>
     <span class="easylink">
     Our full paper about MMCoQA is accepted by ACL 2022 Main Conference.
