--- a/index.html
+++ b/index.html
@@ -146,6 +146,19 @@ information seeking, such as conversational QA, multimodal conversational QA, an
 <h2 style="CLEAR: both">Publications <a href="" target="_blank"></a></h2> 
 </br>
 
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="papers/xxx" 
+			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Multiview Identifiers Enhanced Generative Retrieval</span> 
+      <br><b>Yongqi Li</b>, Nan Yang, Liang Wang, Furu Wei & Wenjie Li
+    <br>ACL 2022 (Full)
+   <br>&nbsp;&nbsp;&bull; <a href="..." target="_blank">Codes&Data coming</a> &nbsp;&nbsp;
+  </td>
+  </tr>
+ </tbody>
+</table>
 
 
 <table>
