--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ information seeking, such as conversational QA, multimodal conversational QA, an
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Data Distillation for Text Classification</span> 
       <br><b>Yongqi Li</b> & Wenjie Li
-   <br>&nbsp;&nbsp;&bull; <a href="https://arxiv.org/abs/2104.08448" target="_blank">Arxiv</a> &nbsp;&nbsp;
+   <br>&nbsp;&nbsp;&bull; <a href="https://arxiv.org/abs/2104.08448" target="_blank">Arxiv</a> 2021 &nbsp;&nbsp;
 
   </td>
   </tr>
@@ -213,7 +213,7 @@ information seeking, such as conversational QA, multimodal conversational QA, an
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Incremental Knowledge Based Question Answering</span> 
       <br><b>Yongqi Li</b>, Wenjie Li & Liqiang Nie
-   <br>&nbsp;&nbsp;&bull; <a href="https://arxiv.org/abs/2101.06938" target="_blank">Arxiv</a> &nbsp;&nbsp;
+   <br>&nbsp;&nbsp;&bull; <a href="https://arxiv.org/abs/2101.06938" target="_blank">Arxiv</a> 2021 &nbsp;&nbsp;
   </td>
   </tr>
  </tbody>
