--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@ information seeking, such as conversational QA, multimodal conversational QA, an
     <td><span class="title">Data Distillation for Text Classification</span> 
       <br><b>Yongqi Li</b> & Wenjie Li
    <br>&nbsp;&nbsp;&bull; <a href="https://arxiv.org/abs/2104.08448" target="_blank">Arxiv</a> 2021 &nbsp;&nbsp;
+   <br>&nbsp;&nbsp;&bull; <a href="https://github.com/liyongqi67/Data-Distillation-for-Text-Classification" target="_blank">Codes&Data</a> &nbsp;&nbsp;
 
   </td>
   </tr>
