--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@ information seeking, such as conversational QA, multimodal conversational QA, an
 2020 Fall, COMP5541 <span class="title">Machine Learning and Data Analytics </span><br><br>
 2021 Spring, COMP5423 <span class="title">Natural Language Processing </span><br><br>
 2021 Fall, COMP6703 <span class="title">Advanced Topics in Data Analytics</span> <br><br>
-2022 Spring, COMP5423 <span class="title">Natural Language Processing </span>	
+2022 Spring, COMP5423 <span class="title">Natural Language Processing </span><br><br>	
 2023 Spring, COMP5423 <span class="title">Natural Language Processing </span>
 </td></tr></tbody></table>
 <!-- ============================Teaching Assistant===========================================!-->
