--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ information seeking, such as conversational QA, multimodal conversational QA, an
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Dynamic Graph Reasoning for Conversational Open-Domain Question Answering</span> 
       <br><b>Yongqi Li</b>, Wenjie Li & Liqiang Nie
-    <br>ACM TOIS 2022(Full)
+    <br>ACM TOIS 2022 (Full)
    <br>&nbsp;&nbsp;&bull; <a href="https://github.com/liyongqi67/DGRCoQA" target="_blank">Codes&Data</a> &nbsp;&nbsp;
   </td>
   </tr>
@@ -198,7 +198,7 @@ information seeking, such as conversational QA, multimodal conversational QA, an
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Data Distillation for Text Classification</span> 
       <br><b>Yongqi Li</b> & Wenjie Li
-	<br>Arxiv 2021 (short paper)
+	<br>Arxiv 2021 (Short paper)
    <br>&nbsp;&nbsp;&bull; <a href="https://github.com/liyongqi67/Data-Distillation-for-Text-Classification" target="_blank">Codes&Data</a> &nbsp;&nbsp;
 
   </td>
@@ -227,7 +227,7 @@ information seeking, such as conversational QA, multimodal conversational QA, an
 			target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Large-Scale Question Tagging via Joint Question-Topic Embedding Learning</span> 
       <br>Liqiang Nie, <b>Yongqi Li</b>, Fuli Feng, Xuemeng Song, Meng Wang & Yinglong Wang
-    <br>ACM TOIS 2020(Full)
+    <br>ACM TOIS 2020 (Full)
    <br>&nbsp;&nbsp;&bull; <a href="https://github.com/liyongqi67/PROFIT" target="_blank">Codes&Data</a> &nbsp;&nbsp;
   </td>
   </tr>
