--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ information seeking, such as conversational QA, multimodal conversational QA, an
 <!-- ============================Patent===========================================!-->
 <h2 style="CLEAR: both;">Patent</h2>
 <table><tbody><tr><td>
-  <span class="title">Routing Micro-videos via A Temporal Graph-guided Recommendation System</span>(ZL 2019 1 0599470.7) &nbsp;&nbsp;
+  <span class="title">Routing Micro-videos via A Temporal Graph-guided Recommendation System</span> (ZL 2019 1 0599470.7) &nbsp;&nbsp;
   <br> - Meng Liu, Liqiang Nie, Yongqi Li, Jianhua Yin, Tian Gan and Xuemeng Song
 </td></tr></tbody></table>
 
@@ -432,6 +432,7 @@ information seeking, such as conversational QA, multimodal conversational QA, an
   Program Committee Member and Reviewer for <span class="title">ACM WSDM 2023</span><br><br>
   Invited Reviewer for <span class="title">ACM Transactions on Information Systems (TOIS)</span><br><br>
   Invited Reviewer for <span class="title">IEEE Transactions on Knowledge and Data Engineering (TKDE)</span><br><br>
+  Invited Reviewer for <span class="title">Information Processing & Management (TCSVT)</span><br><br>
   Invited Reviewer for <span class="title">IEEE Transactions on Circuits and Systems for Video Technology (TCSVT)</span><br><br>
   Invited Reviewer for <span class="title">Information Sciences</span><br><br>
   Invited Reviewer for <span class="title">ChinaMM (2020) </span>
