--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ information seeking, such as conversational QA, multimodal conversational QA, an
     <td><span class="title">Multiview Identifiers Enhanced Generative Retrieval</span> 
       <br><b>Yongqi Li</b>, Nan Yang, Liang Wang, Furu Wei & Wenjie Li
     <br>ACL 2023 (Full)
-   <br>&nbsp;&nbsp;&bull; <a href="..." target="_blank">Codes&Data coming</a> &nbsp;&nbsp;
+   <br>&nbsp;&nbsp;&bull; <a href="https://github.com/liyongqi67/MINDER" target="_blank">Codes&Data</a> &nbsp;&nbsp;
   </td>
   </tr>
  </tbody>
@@ -362,7 +362,35 @@ information seeking, such as conversational QA, multimodal conversational QA, an
 -->
 <!-- ============================Papers===========================================!-->
 
+<!-- ============================Professional Services===========================================!-->
+<h2 style="CLEAR: both;">Professional Services</h2>
+<table><tbody><tr><td>
+  Program Committee Member and Reviewer for <span class="title">ACM WSDM 2023</span><br><br>
+  Invited Reviewer for <span class="title">ACM Transactions on Information Systems (TOIS)</span><br><br>
+  Invited Reviewer for <span class="title">IEEE Transactions on Knowledge and Data Engineering (TKDE)</span><br><br>
+  Invited Reviewer for <span class="title">Information Processing & Management (IP&M)</span><br><br>
+  Invited Reviewer for <span class="title">IEEE Transactions on Circuits and Systems for Video Technology (TCSVT)</span><br><br>
+  Invited Reviewer for <span class="title">Information Sciences</span><br><br>
+  Invited Reviewer for <span class="title">ChinaMM (2020) </span>
+	
+</td></tr></tbody></table>
 
+<!-- ============================Patent===========================================!-->
+<h2 style="CLEAR: both;">Patent</h2>
+<table><tbody><tr><td>
+  <span class="title">Routing Micro-videos via A Temporal Graph-guided Recommendation System</span> (ZL 2019 1 0599470.7) &nbsp;&nbsp;
+  <br> - Meng Liu, Liqiang Nie, Yongqi Li, Jianhua Yin, Tian Gan and Xuemeng Song
+</td></tr></tbody></table>
+
+<table><tbody><tr><td>
+  <span class="title">Explicit Interaction Model towards Text Classification </span> (ZL 2018 1 1296063.0) &nbsp;&nbsp;
+  <br> - Cunxiao Du, Fuli Feng, Zhaozheng Chen, Yongqi Li, Xuemeng Song and Liqiang Nie
+</td></tr></tbody></table>
+
+<table><tbody><tr><td>
+  <span class="title">Learning to Score Diving Sports</span> (ZL 2018 1 1030493.8) &nbsp;&nbsp; 
+  <br> - Yongqi Li, Cunxiao Du, Junyu Lin, Tian Gan, Xuemeng Song and Liqiang Nie
+</td></tr></tbody></table>
 
 <!-- ============================Projects===========================================!-->
 <h2 style="CLEAR: both;">Projects</h2>
@@ -395,22 +423,7 @@ information seeking, such as conversational QA, multimodal conversational QA, an
 <!-- ============================Projects===========================================!-->
 
 
-<!-- ============================Patent===========================================!-->
-<h2 style="CLEAR: both;">Patent</h2>
-<table><tbody><tr><td>
-  <span class="title">Routing Micro-videos via A Temporal Graph-guided Recommendation System</span> (ZL 2019 1 0599470.7) &nbsp;&nbsp;
-  <br> - Meng Liu, Liqiang Nie, Yongqi Li, Jianhua Yin, Tian Gan and Xuemeng Song
-</td></tr></tbody></table>
 
-<table><tbody><tr><td>
-  <span class="title">Explicit Interaction Model towards Text Classification </span> (ZL 2018 1 1296063.0) &nbsp;&nbsp;
-  <br> - Cunxiao Du, Fuli Feng, Zhaozheng Chen, Yongqi Li, Xuemeng Song and Liqiang Nie
-</td></tr></tbody></table>
-
-<table><tbody><tr><td>
-  <span class="title">Learning to Score Diving Sports</span> (ZL 2018 1 1030493.8) &nbsp;&nbsp; 
-  <br> - Yongqi Li, Cunxiao Du, Junyu Lin, Tian Gan, Xuemeng Song and Liqiang Nie
-</td></tr></tbody></table>
 
 <!-- ============================Patent===========================================!-->
 
@@ -426,18 +439,6 @@ information seeking, such as conversational QA, multimodal conversational QA, an
 </td></tr></tbody></table>
 <!-- ============================Teaching Assistant===========================================!-->
 
-<!-- ============================Professional Services===========================================!-->
-<h2 style="CLEAR: both;">Professional Services</h2>
-<table><tbody><tr><td>
-  Program Committee Member and Reviewer for <span class="title">ACM WSDM 2023</span><br><br>
-  Invited Reviewer for <span class="title">ACM Transactions on Information Systems (TOIS)</span><br><br>
-  Invited Reviewer for <span class="title">IEEE Transactions on Knowledge and Data Engineering (TKDE)</span><br><br>
-  Invited Reviewer for <span class="title">Information Processing & Management (IP&M)</span><br><br>
-  Invited Reviewer for <span class="title">IEEE Transactions on Circuits and Systems for Video Technology (TCSVT)</span><br><br>
-  Invited Reviewer for <span class="title">Information Sciences</span><br><br>
-  Invited Reviewer for <span class="title">ChinaMM (2020) </span>
-	
-</td></tr></tbody></table>
 
 <!-- ============================Professional Services===========================================!-->
 
